adding Hero page code

--- a/index.html
+++ b/index.html
@@ -4,8 +4,33 @@
                               <meta charset="UTF-8">
                               <meta name="viewport" content="width=device-width, initial-scale=1.0">
                               <title>B10A1</title>
+                              <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+                              <link rel="stylesheet" href="style/style.css">
 </head>
-<body>
-                              
+<body class="amf">
+                              <header>
+                                                            <div class="top">
+                                                                                          <h2 class="th">Awlad.H</h3>
+                                                                                          <p class="lth"><button class="dr">Download Resume</button></p>
+
+                                                            </div>
+                                                            <section id="hero">
+                                                                                          <div class="cntnr">
+                                                                                                                        <section class="grp"><img src="./assets/Group.png" alt=""></section>
+                                                                                                                        <h1 class="hd">"In the near future, I hope to become a Developer."</h1>
+                                                                                                                        <p class="txt">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                                                                                                                        <button class="btn">Contact with me</button>
+                                                                                          </div>
+                                                            </section>
+                                                             
+                              </header>
+                              <main>
+
+                              </main>
+                              <footer>
+
+                              </footer>                              
 </body>
 </html>
