added third page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
                               <meta charset="UTF-8">
                               <meta name="viewport" content="width=device-width, initial-scale=1.0">
                               <title>B10A1</title>
+                              <link rel="preconnect" href="https://fonts.googleapis.com">
+                              <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+                              <link href="https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
                               <link rel="stylesheet" href="style/style.css">
 </head>
 <body class="amf">
@@ -74,6 +77,32 @@
                                                                                           <div class="dt">
                                                                                                                         <iframe width="1076" height="550" src="https://www.youtube.com/embed/DGHn2uOAVCE?si=XDFz1GYZ4CCvqH_4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                                                                                           </div>
+                                                            </section>
+                                                            <section class="m">
+                                                                                          <div class="mn">
+                                                                                                                        <h3 class="hkk">My Current Target</h3>
+                                                                                                                        <p class="hll">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                                                                                          </div>
+                                                                                          <section class="mno">
+                                                                                                                        <div class="mnop">
+                                                                                                                                                      <img src="./assets/html.png" alt="">
+                                                                                                                                                      <h3 class="hcj">HTML</h3>
+                                                                                                                                                      <p class="mnotxt">Lorem Ipsum is simply dummy text of the printing.</p>
+                                                                                                                                                      <nav class="btq">Learn more</nav>
+                                                                                                                        </div>
+                                                                                                                        <div class="mnop">
+                                                                                                                                                      <img src="./assets/css.png" alt="">
+                                                                                                                                                      <h3 class="hcj">CSS</h3>
+                                                                                                                                                      <p class="mnotxt">Lorem Ipsum is simply dummy text of the printing.</p>
+                                                                                                                                                      <nav class="btq">Learn more</nav>
+                                                                                                                        </div>
+                                                                                                                        <div class="mnop">
+                                                                                                                                                      <img src="./assets/js.png" alt="">
+                                                                                                                                                      <h3 class="hcj">JavaScript</h3>
+                                                                                                                                                      <p class="mnotxt">Lorem Ipsum is simply dummy text of the printing.</p>
+                                                                                                                                                      <nav class="btq">Learn more</nav>
+                                                                                                                        </div>
+                                                                                          </section>
                                                             </section>
                               </main>
                               <footer>
