Support page added

--- a/index.html
+++ b/index.html
@@ -103,6 +103,19 @@
                                                                                                                                                       <nav class="btq">Learn more</nav>
                                                                                                                         </div>
                                                                                           </section>
+                                                                                         
+                                                            </section>
+                                                            <section>
+                                                                                          <div class="sprt">
+                                                                                                                       <div class="lcl">
+                                                                                                                        <h2 class="shead">I need Support</h2>
+                                                                                                                        <p class="stx">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                                                                                                                       </div>
+                                                                                                                        <div class="csk">
+                                                                                                                                                      <div><input class="plct arr" placeholder="Suggest me any feedback for me" type="text"></div>
+                                                                                                                                                      <button class="plct plt">Submit</button>
+                                                                                                                        </div>
+                                                                                          </div>
                                                             </section>
                               </main>
                               <footer>
