--- a/index.html
+++ b/index.html
@@ -119,7 +119,14 @@
                                                             </section>
                               </main>
                               <footer>
-
+                                                            <section class="lst">
+                                                                                          <h2>An Open Commitment by Awlad Hossain</h2>
+                                                                                          <div>
+                                                                                                                        <img src="./assets/facebook.png" alt="">
+                                                                                                                        <img src="./assets/github.png" alt="">
+                                                                                                                        <img src="./assets/linkedin-icon 1.png" alt="">
+                                                                                          </div>
+                                                            </section>
                               </footer>                              
 </body>
 </html>
